testsuite/poke.pkl/mod-f32-diag-2.pk
/* { dg-do compile } */

var res
  = 1 .% (9 as uint<63>); /* { dg-error "invalid operand .*" } */
